:fire: Remove all extra boilerplate

--- a/articles/code-201/index.mdx
+++ b/articles/code-201/index.mdx
@@ -39,7 +39,7 @@ In technology, there are four categories of issues, from easiest to hardest to h
 - Known unknowns
 - Unknown unknowns
 
-We know what we know, we can know what we don't know.
+We know what we know, and we sometimes can know what we don't know.
 
 ## Bugs
 
