:rotating_light: Fix prettier/eslint warnings

--- a/posts/code-101/index-fr.mdx
+++ b/posts/code-101/index-fr.mdx
@@ -9,6 +9,7 @@ La programmation est un métier d'avenir. Transversal et présente dans tous les
 L’avantage de ce domaine est le faible nombre de barrières à l’entrée : on peut faire abstraction des diplômes et autres formations coûteuses pourvu qu’on ait la motivation et les capacités pour apprendre.
 
 Ces capacités sont, dans les grandes lignes :
+
 - Persévérance
 - Rigueur
 - Adaptation
@@ -25,7 +26,6 @@ La veille technologique est l'action de se tenir à jour par rapport aux tendanc
 
 Un ingénieur est une personne capable de conduire des travaux au sens large.
 
-
 Ce texte sera en anglais et en français.
 
 ## Mettre en place son environment
@@ -36,7 +36,7 @@ Le premier outil à maîtriser est son système d'exploitation. Windows, MacOS e
 
 ### IDE: Éditeur (Intégré) de Texte
 
-Ensuite, il faut un éditeur de texte ou, plus facile, un Environnement de Développement Intégré. Notepad++, Visual Studio, Visual Studio Code, la suite Jetbrains, Vim, Emacs ou encore Eclipse sont  des exemples connus et reconnus, parmi tant d'autres.
+Ensuite, il faut un éditeur de texte ou, plus facile, un Environnement de Développement Intégré. Notepad++, Visual Studio, Visual Studio Code, la suite Jetbrains, Vim, Emacs ou encore Eclipse sont des exemples connus et reconnus, parmi tant d'autres.
 
 Préférez la seconde catégorie pour débuter. J'utilise personnellement Visual Studio Code.
 
@@ -58,7 +58,7 @@ Voir LIEN article comment apprendre l'anglais.
 
 ### Le code versionning
 
-Versionner son code est essentiel. Il s'agit de garder l'historique des lignes et artefacts de code dans un *repository*. Un repository, ou répertoire, est un dossier rassemblant tous ces éléments.
+Versionner son code est essentiel. Il s'agit de garder l'historique des lignes et artefacts de code dans un _repository_. Un repository, ou répertoire, est un dossier rassemblant tous ces éléments.
 
 Le système de versioning le plus courant est Git. Le concept est simple mais l’utilisation en est compliquée. Techniquement parlant, il s’agit d’un Graphe Direct Acyclique.
 
@@ -72,6 +72,6 @@ L'expression bug vient littéralement d'insectes (bug en anglais) qui s'étaient
 
 Pour debugger, il faut trouver la source du problème. Tout dépendra du contexte.
 
-Souvent, on *step* dans le code, c'est-à-dire qu'on suit les flux de contrôle, ou *control flow* en anglais. Pour faire cela, on se sert soit de l'IDE soit, plus simple, des sorties console.
+Souvent, on _step_ dans le code, c'est-à-dire qu'on suit les flux de contrôle, ou _control flow_ en anglais. Pour faire cela, on se sert soit de l'IDE soit, plus simple, des sorties console.
 
-Une fois l'étape plus ou moins identifiée dans le code, on peut s'attaquer au problème à la racine ou bien, dans le cas contraire, *patcher* juste le symptôme, surtout en cas d'urgence.
+Une fois l'étape plus ou moins identifiée dans le code, on peut s'attaquer au problème à la racine ou bien, dans le cas contraire, _patcher_ juste le symptôme, surtout en cas d'urgence.
