--- a/posts/about/index.mdx
+++ b/posts/about/index.mdx
@@ -6,8 +6,35 @@ My name is Pierre-Yves.
 
 I'm a French Software Engineer in his mid-twenties.
 
-My main professional specialty is Typescript, both on the front-end (React, Angular, Vue.js) and on the back-end (Node.js, mainly NestJS as a framework).
+I started programing at the age of 13, with C and C++, and have not stopped ever since. Having used many languages and libraries ranging from PHP's Laravel to C++'s [boost](https://www.boost.org/), I have a large toolbox at my disposal to solve real problems.
+
+Professionally, my specialization is in web technologies conceived and implemented to work at an increasingly large scale. Beyond the technical aspect of scaling, it is a goal in which I strive to include ease of contribution and onboarding of new contributors. There is also a lot to be said about being able to quickly pivot if the business or team I work with requires so, without resorting to long and costly rewrites.
+
+In particular, I've extensively worked with Typescript. On the back-end, I mostly worked with either Node.js and Nest.JS, or a Serverless stack on AWS. On the front-end, I'm most familiar with React and Next.js but did work, for my first experience, on several complex Angular codebases with also non-trivial aomunt of Vue.js 2.
+
+My most recent experience has been as a Tech Lead for an ambitious 25-person startup, including six other engineers.
 
 I also do **a lot** of Rust for my [personal projects](https://github.com/pierreyoda)!
 
 You can check out my [LinkedIn profile](https://www.linkedin.com/in/pierre-yves-diallo-567028113/) for more information about my career.
+
+## History and stack
+
+The first iteration of this blog was called "newstackwhodis" (which I still to this day think is funny), and used React and Next.js with [MDX](https://mdxjs.com/), a project which in short allows use of React components directly in your markdown, which was needed for the kind of articles I had in mind.
+
+The current naming came from a startup name generator which came up with "Prava" in a logo that I liked so much that I bought the corresponding full branding kit, which you won't see anywhere currently as I iterated towards a minimalist style that was more to my personal taste. I'm obviously no designer though.
+
+After a typo in Google, I found out that Praca roughly means job or occupation in Polish (technically in Old Czech), and this website is more for the occupation side - my job but as a passion, both growing mutually from each other. For more pragmatic concerns, Praca meaning nothing in English is a real advantage for domain name availability and SEO purposes.
+
+The kind of articles you will see here will generally be backed by fully independent sub-modules in Typescript with no external library unless really needed, with a minimal set of unit tests; they are almost micro-libraries on their own. Not that I would ever publish them on NPM, mind you, since they all are scoped for specific usage inside an article on this website only. They are agnostic from front-end usage though.
+
+I'm not using established libraries since they many not exist, and if they do may be too heavy due to scope or indirect dependencies; among other criteria. More importantly, the fun of learning and discovering whole new applications and trade-offs made in the space explored by the article is the whole point, both for me and I hope for the reader. That's why I'm reinventing very small, tightly-scoped wheels for every new interactive article.
+
+Early along the way I was finally able to try SvelteKit when Sapper was deprecated. I've been really enjoying my time with Svelte(Kit) with a truly painless learning curve. Be aware that SvelteKit has been through many breaking changes on the road to 1.0, transparently explained by Svelte creator Rich Harris but closely following the announcements and issues on GitHub has been required for this website to stay up-to-date.
+
+I also use [mdsvex](https://mdsvex.com/), Svelte's flavor of React, with a mostly smooth experience apart from tooling: eslint or prettier cannot work with it 100% yet, far from it.
+There was one show-stopper TODO: when resolved
+
+I've stuck with Vercel for hosting despite letting go of Next.js for hosting, since this website is also fully static so it's completely free. The website at large should be quite performant using Svelte, but the same may not be true of an interactive component in one of my articles especially as I go for more ambitious projects. For instance, I have an almost™ finished Game Boy (Color) emulator in Rust that I would very much like to bring to this website through WebAssembly. The issue I risk to encounter would not be from the Rust side of course, but more on the rendering side if I go for naive solutions while offering a high refresh rate. This could be be the opportunity to go for some low-level WebGL usage, which sounds like a great fun if maybe overkill.
+
+TODO: also talk about GitHub synchronization script
