:construction: WIP migration to MDX, layout styling

--- a/src/pages/blog/hncli-1-concept.mdx
+++ b/src/pages/blog/hncli-1-concept.mdx
@@ -5,9 +5,7 @@ date: "2022-11-25"
 published: true
 ---
 
-<script lang="ts">
-  import VideoPlayer from "$lib/VideoPlayer.svelte";
-</script>
+import { VideoPlayer } from "@/components/blog/VideoPlayer";
 
 # An Hacker News Terminal UI: concept and road to release
 
