--- a/src/pages/blog/introduction-to-lsystems.mdx
+++ b/src/pages/blog/introduction-to-lsystems.mdx
@@ -11,6 +11,7 @@ import {
   lsystemKochSnowflake,
   lsystemTree,
 } from "@/content/lsystem/article";
+import { LSystemStatesDisplay } from "@/components/blog/lsystem/LSystemStatesDisplay"
 import { LSystemDescriptorWidget } from "@/components/blog/lsystem/LSystemDescriptorWidget";
 import { LSystemControllableTracingRenderer } from "@/components/blog/lsystem/LSystemControllableTracingRenderer";
 
@@ -28,11 +29,7 @@ For instance, here is Lindenmayer's original L-System modeling the growth of an 
 
 The evolution rules then allow us to iterate this L-System as such:
 
-{/* <ol class="flex flex-col">
-{#each lsystemAlgaeStates as algaeState, generationIndex}
-  <li>Generation #{generationIndex} state: {algaeState}</li>
-{/each}
-</ol> */}
+<LSystemStatesDisplay states={lsystemAlgaeMeta.lsystemAlgaeStates} />
 
 ...and so on.
 
