:bug: Blog article Chip-8 emulator fix ROM player component

--- a/src/pages/blog/getting-into-emulator-development-chip8.mdx
+++ b/src/pages/blog/getting-into-emulator-development-chip8.mdx
@@ -5,12 +5,12 @@ date: "2021-12-20"
 published: true
 ---
 
-import { MAZE_ROM, TETRIS_ROM } from "./content/chip8";
+import { MAZE_ROM, TETRIS_ROM } from "@/content/chip8/article";
 import { Chip8Player } from "@/components/blog/chip8/Chip8Player";
 
 # Getting Into Emulator Development with the CHIP-8
 
-<Chip8Player dataROM={MAZE_ROM} scale={10} disableKeypad />
+<Chip8Player rom={MAZE_ROM} scale={10} disableKeypad />
 
 ## Emulators
 
@@ -20,4 +20,4 @@ import { Chip8Player } from "@/components/blog/chip8/Chip8Player";
 
 ## CHIP-8 in your browser
 
-<Chip8Player dataROM={TETRIS_ROM} scale={10} />
+<Chip8Player rom={TETRIS_ROM} scale={10} />
