--- a/src/pages/blog/introduction-to-lsystems.mdx
+++ b/src/pages/blog/introduction-to-lsystems.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Introduction to L-Systems"
+title: "Introduction to L-Systems (draft)"
 description: "A brief introduction to Lindenmayer Systems and their applications."
 date: "2021-12-10"
 published: true
