:art: prettier pass

--- a/src/pages/blog/introduction-to-lsystems.mdx
+++ b/src/pages/blog/introduction-to-lsystems.mdx
@@ -5,15 +5,10 @@ date: "2021-12-10"
 published: true
 ---
 
-import {
-  lsystemAlgaeMeta,
-  lsystemSierpinski,
-  lsystemKochSnowflake,
-  lsystemTree,
-} from "@/content/lsystem/article";
-import { LSystemStatesDisplay } from "@/components/blog/lsystem/LSystemStatesDisplay"
+import { LSystemStatesDisplay } from "@/components/blog/lsystem/LSystemStatesDisplay";
 import { LSystemDescriptorWidget } from "@/components/blog/lsystem/LSystemDescriptorWidget";
 import { LSystemControllableTracingRenderer } from "@/components/blog/lsystem/LSystemControllableTracingRenderer";
+import { lsystemAlgaeMeta, lsystemSierpinski, lsystemKochSnowflake, lsystemTree } from "@/content/lsystem/article";
 
 # Introduction to L-Systems
 
