:construction: Update about page

--- a/src/pages/blog/about.mdx
+++ b/src/pages/blog/about.mdx
@@ -6,13 +6,12 @@ My name is Pierre-Yves.
 
 I'm a Software Engineer in his late twenties.
 
-## More details
+I started programming at the age of 13, with C and C++, and have not stopped ever since. I've been using - ranging from coding _personal projects_ to _real-world usage_ - many languages and libraries. I also spend a lot of time keeping up-to-date with the state of the art, especially in web development.
 
-I started programming at the age of 13, with C and C++, and have not stopped ever since. Having used (ranging from hacking around to **real-world usage**) many languages and libraries, I've been continuously adding to the toolbox at my disposal to **solve problems**.
-
-Professionally, my specialization is in **web technologies**.
 
 I also do **a lot** of Rust for my [personal projects](https://github.com/pierreyoda)!
+
+See? I'm a real full-stack software engineer :licorn: // FIXME: proper emoji
 
 ## About this website
 
@@ -27,16 +26,17 @@ Early along the way I was finally able to try **SvelteKit** when Sapper was depr
 I've stuck with Vercel for hosting despite letting go of Next.js for hosting, since this website is also fully static.
 
 **EDIT**: after checking out the domain names availability, I've ultimately chosen to go with `newstackwhodis`.
-
-### Content to come
+**EDIT 2**: due to a but in mdsvex and/or SvelteKit, I switched back to Next.js :sad: // TODO: cry emoji :)
 
 The kind of articles you will see here will generally be backed by fully independent sub-modules in Typescript, with a minimal set of unit tests; they are almost micro-libraries on their own. Not that I would ever publish them on NPM, mind you, since they all are scoped for specific usage inside an article on this website only. They are agnostic from front-end usage though.
 
-To go into more details about these, I'm not using established libraries if possible since they many not exist, and if they do may be too heavy due to scope or indirect dependencies among other criteria. More importantly, the fun of learning and discovering whole new applications and trade-offs in the space explored by the article is the whole point, both for me and I hope for the reader.
+To go into more details about these, I'm not using established libraries if possible since they many not exist, and if they do may be too heavy due to scope or indirect dependencies among other criteria. More importantly, the fun of learning and discovering whole new applications and trade-offs in the space explored by the article is the whole point, both for me and, I hope for the reader.
 
-As a teaser, here's the kind of articles in my pipeline, at a more or less advanced stage:
+## WIP articles
 
-- A [CHIP-8](https://www.wikiwand.com/en/CHIP-8) emulator with an in-browser player.
+Here's a couple of articles in in my to-do list:
+
+- A [CHIP-8](https://www.wikiwand.com/en/CHIP-8) emulator with an in-browser player, in Typescript. Check out the [draft article](/blog/getting-into-emulator-development-chip8)
 - An introduction to [L-Systems](https://www.wikiwand.com/en/L-system) with dynamic widgets to generate pretty fractals or trees.
 - An introduction to Genetic Algorithms and their applications. The planned interactive demo is the automatic optimization feature of 2D inventory space you can see in many video games, especially in Action-RPGs.
 
