:memo: Updated about page

--- a/src/pages/blog/about.mdx
+++ b/src/pages/blog/about.mdx
@@ -6,31 +6,37 @@ My name is Pierre-Yves.
 
 I'm a Software Engineer in his late twenties.
 
-I started programming at the age of 13, with C and C++, and have not stopped ever since. I've been using - ranging from coding _personal projects_ to _real-world usage_ - many languages and libraries. I also spend a lot of time keeping up-to-date with the state of the art, especially in web development.
+I started programming at the age of 13, with C then C++, and have not stopped ever since. I've been using many languages and libraries or frameworks, from coding _personal projects_ to _work projects_. I also spend a lot of time keeping up-to-date with the state of the art, especially in web development. This explains the frequent dependencies updates that I do and review manually, depending on the respect of [semver](https://semver.org).
 
 
-I also do **a lot** of Rust for my [personal projects](https://github.com/pierreyoda)!
+I also do **a lot** of Rust for my [personal projects](https://github.com/pierreyoda), having started from the beta version.
 
-See? I'm a real full-stack software engineer :licorn: // FIXME: proper emoji
+See? I'm a real Full-Stack Software Engineer ;)
 
 ## About this website
 
-The first iteration of this blog was called **newstackwhodis** (which I still to this day think is very funny), and used React and Next.js with [MDX](https://mdxjs.com/), a project which in short allows use of React components directly in your markdown, which was needed for the kind of articles I had in mind.
+The first iteration of this blog was called **newstackwhodis** (which I still to this day think is very funny), and used React & Next.js with [MDX](https://mdxjs.com/). In short, MDX is a library which allows using React components directly in your Markdown blog posts. It was needed for the kind of articles I had in mind.
 
-The current naming came from a startup branding generator which came up with **Prava** in a logo that I liked so much that I bought the corresponding full branding kit. You won't see it anywhere currently as I iterated towards a minimalist style that was more to my personal taste. **I'm obviously no designer though.**
+The current naming came from a startup branding generator which came up with **Prava** in a logo. I like the corresponding UI pack so much that I bought the full branding kit (it was cheap). You won't see it anywhere currently - except in the favicon, for now.
 
-After a typo in Google, I found out that **Praca** roughly means job or occupation in Polish (technically in Old Czech), and this website is more for the occupation side - my job but as a passion, both growing mutually from each other. For more pragmatic concerns, Praca meaning nothing in English is a real advantage for domain name availability and SEO purposes.
+I quickly iterated towards a minimalist style that was more to my personal taste. **I'm obviously no designer though.**
+
+After a typo when googling, I found out that **Praca** roughly means job or occupation in Polish (technically in Old Czech), and this website is more for the occupation side. Software engineering is probably my biggest passion which reinforces,  in a virtuous circle, my daily job. Praca meaning nothing in English is a real advantage for domain name availability and SEO purposes.
 
 Early along the way I was finally able to try **SvelteKit** when Sapper was deprecated. It's kind of Svelte's Next.js. I also use [mdsvex](https://mdsvex.com/), Svelte's flavor of MDX.
 
-I've stuck with Vercel for hosting despite letting go of Next.js for hosting, since this website is also fully static.
+I've stuck with Vercel for hosting despite letting go of the Next.js framework, since this website is fully static.
 
-**EDIT**: after checking out the domain names availability, I've ultimately chosen to go with `newstackwhodis`.
-**EDIT 2**: due to a but in mdsvex and/or SvelteKit, I switched back to Next.js :sad: // TODO: cry emoji :)
+**EDIT**: after checking out the domain names availability, I was forced to chose to go with `newstackwhodis.com`.
 
-The kind of articles you will see here will generally be backed by fully independent sub-modules in Typescript, with a minimal set of unit tests; they are almost micro-libraries on their own. Not that I would ever publish them on NPM, mind you, since they all are scoped for specific usage inside an article on this website only. They are agnostic from front-end usage though.
+**EDIT 2**: due bug(s) in mdsvex and/or SvelteKit, I had to switch back to Next.js.
 
-To go into more details about these, I'm not using established libraries if possible since they many not exist, and if they do may be too heavy due to scope or indirect dependencies among other criteria. More importantly, the fun of learning and discovering whole new applications and trade-offs in the space explored by the article is the whole point, both for me and, I hope for the reader.
+The kind of articles you will see here will generally be backed by fully independent sub-modules in Typescript, with a minimal set of unit tests; they are almost micro-libraries on their own. Not that I would ever publish them on NPM, mind you, since they all are scoped for specific usage inside an article on this website only. They should work with any current front-end usage though.
+
+To go into more details about these, I'm not using established libraries if possible, since they may not exist.
+If they do, they may be too heavy due to scope or indirect dependencies, among other criteria.
+
+More importantly, the fun of learning and discovering whole new applications and trade-offs in the topic explored by one of my articles is the main goal - both for me and, I hope for any eventual reader.
 
 ## WIP articles
 
@@ -40,4 +46,6 @@ Here's a couple of articles in in my to-do list:
 - An introduction to [L-Systems](https://www.wikiwand.com/en/L-system) with dynamic widgets to generate pretty fractals or trees.
 - An introduction to Genetic Algorithms and their applications. The planned interactive demo is the automatic optimization feature of 2D inventory space you can see in many video games, especially in Action-RPGs.
 
-I also have an [almost™ finished](https://github.com/pierreyoda/rustboycolor) Game Boy (Color) emulator in Rust that I would very much like to bring to this website through WebAssembly. The issue I risk to encounter would not be from the Rust side, but more on the rendering side if I go for naive solutions while offering a high refresh rate. This could be be the opportunity to go for some low-level WebGL usage, which sounds like great fun - if maybe overkill.
+I also have an [almost™ finished](https://github.com/pierreyoda/rustboycolor) Game Boy (Color) emulator in Rust that I would very much like to bring to this website through WebAssembly. The issue I risk to encounter would not be from the Rust side, but more on the rendering side if I go for naive solutions while offering a high refresh rate.
+
+This could be be the opportunity to go for some low-level WebGL usage, which sounds like great fun - if maybe overkill.
