:construction:  Foundations for projects filtering by tag

--- a/src/pages/blog/about.mdx
+++ b/src/pages/blog/about.mdx
@@ -1,3 +1,5 @@
+import { HNCLI_WEBSITE_URL } from "@/content/constants";
+
 # About Me
 
 Hi! :wave:
@@ -9,7 +11,7 @@ I'm a Software Engineer in his late twenties.
 I started programming at the age of 13, with C then C++, and have not stopped ever since. I've been using many languages and libraries or frameworks, from coding _personal projects_ to _work projects_. I also spend a lot of time keeping up-to-date with the state of the art, especially in web development. This explains the frequent dependencies updates that I do and review manually, depending on the respect of [semver](https://semver.org).
 
 
-I also do **a lot** of Rust for my [personal projects](https://github.com/pierreyoda), having started from the beta version.
+I also do **a lot** of Rust for my [personal projects](`https://github.com/pierreyoda`)! I've been using Rust for almost 13 years now in 2025.
 
 See? I'm a real Full-Stack Software Engineer ;)
 
