:pencil2: Fix typo in about page

--- a/src/pages/blog/about.mdx
+++ b/src/pages/blog/about.mdx
@@ -29,7 +29,7 @@ I've stuck with Vercel for hosting despite letting go of the Next.js framework, 
 
 **EDIT**: after checking out the domain names availability, I was forced to chose to go with `newstackwhodis.com`.
 
-**EDIT 2**: due bug(s) in mdsvex and/or SvelteKit, I had to switch back to Next.js.
+**EDIT 2**: due to bug(s) in mdsvex and/or SvelteKit, I had to switch back to Next.js.
 
 The kind of articles you will see here will generally be backed by fully independent sub-modules in Typescript, with a minimal set of unit tests; they are almost micro-libraries on their own. Not that I would ever publish them on NPM, mind you, since they all are scoped for specific usage inside an article on this website only. They should work with any current front-end usage though.
 
