:memo: Small improvements to the L-Systems article

--- a/src/pages/blog/introduction-to-lsystems.mdx
+++ b/src/pages/blog/introduction-to-lsystems.mdx
@@ -40,7 +40,7 @@ We move the turtle forward when encountering a _variable_, and perform operation
 
 From any given state and its associated set of rules, we can now compute a set of coordinates to be drawn sequentially as line segments.
 
-This is done internally by the `traceLSystem` function, which outputs coordinates then rendered with **d3.js** in a purpose-made Svelte component.
+This is done internally by the `traceLSystem` function, which outputs coordinates then rendered in SVG in a purpose-made React component.
 
 ### Sierpinski's Triangle
 
