:memo: Programming 101 article: clarify position on LLMs

--- a/src/pages/blog/programming-101-french.mdx
+++ b/src/pages/blog/programming-101-french.mdx
@@ -80,7 +80,7 @@ Le système de versioning le plus courant est **Git**. Le concept est simple mai
 
 ### Assistance par ChatGPT, GitHub Copilot ou équivalent
 
-Je déconseille fortement toute forme d'aide de ces outils pour tout développeur (expérimenté ou non), d'autant plus que ces **LLM** (Large Language Model) ont une forte tendance à "halluciner" (c'est bien le terme technique) des variables, fonctions ou pire qui n'existent pas.
+Je déconseille fortement toute forme d'aide de ces outils pour tout développeur débutant, notamment car ces **LLM** (Large Language Model) ont une forte tendance à "halluciner" (c'est bien le terme technique) des variables, fonctions, ou pire, qui n'existent pas.
 
 ---
 
